# mcpelauncher-core

./: CMakeLists.txt
include/mcpelauncher/: app_platform.h  hook.h
src/: app_platform.cpp  crash_handler.cpp  hook.cpp  hybris_utils.cpp  minecraft_utils.cpp  mod_loader.cpp  patch_utils.cpp
